--- a/estilos.css
+++ b/estilos.css
@@ -2,30 +2,36 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: white;
 }
 
 header {
-    background-color: #333;
+    background-color: black;
     color: white;
     text-align: center;
     padding: 20px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 section {
     padding: 20px;
+    text-align: center;
+    background-color: #08C851;;
 }
 
-.testimonials {
-    background-color: #fff;
+h3{
+    color: #08C851;
+}
+
+.sections {
+    background-color: white;
     padding: 20px;
     margin-top: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
-.testimonial {
+.element {
     border: 1px solid #ccc;
     padding: 10px;
     margin-bottom: 10px;
@@ -39,15 +45,10 @@ section {
     margin-right: 10px;
 }
 
-.cta {
-    text-align: center;
-    margin-top: 20px;
-}
-
 button {
     padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     cursor: pointer;
     border-radius: 5px;
@@ -55,5 +56,13 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color:yellow;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
 }
